crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_big_int__test__alter_table_alter_column_type_err.snap
---
source: crates/squawk_linter/src/rules/prefer_big_int.rs
expression: errors
---
[
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 35..42,
        messages: [],
    },
]
