crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_big_int__test__create_table_many_err.snap
---
source: crates/squawk_linter/src/rules/prefer_big_int.rs
expression: errors
---
[
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 30..37,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 47..53,
        messages: [],
    },
]
