crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__prefer_big_int__test__err.snap
---
source: crates/squawk_linter/src/rules/prefer_big_int.rs
expression: errors
---
[
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 29..37,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 69..73,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 105..112,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 144..148,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 180..186,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 218..225,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 257..264,
        messages: [],
    },
    Violation {
        code: PreferBigInt,
        message: "Using 32-bit integer fields can result in hitting the max `int` limit.",
        text_range: 296..307,
        messages: [],
    },
]
